--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '21 17 * * *'
+    - cron: '0 0 5 31 2 ?'
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
